# ade791x-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: cargo.yml  rust.yml
src/: ade791x.rs  lib.rs  poly.rs  register.rs
tests/: poly.rs  single.rs
